--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "chart.js": "^3.8.0",
+    "chartjs-plugin-annotation": "^1.4.0",
+    "chartjs-plugin-datalabels": "^2.0.0",
+    "ng2-charts": "^3.1.2",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
